After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 789692 - crash in geometry update on window close
crash in geometry update on window close
Status: RESOLVED FIXED
Product: gnome-terminal
Classification: Core
Component: general
3.26.x
Other Linux
: Normal critical
: ---
Assigned To: GNOME Terminal Maintainers
GNOME Terminal Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-10-31 09:48 UTC by Christian Persch
Modified: 2017-11-12 09:29 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Christian Persch 2017-10-31 09:48:38 UTC
Found at https://bugzilla.redhat.com/show_bug.cgi?id=1463167 :

AFAICT, the window was closed when the 'confirm close' dialogue was affirmed, then destroying the window somehow updated the show-tabs notebook property which triggered a geometry update which crashed.

https://retrace.fedoraproject.org/faf/reports/1755033/ shows this with 3.24 and 3.26.

Thread 1 (Thread 0x7fe44b437a80 (LWP 13496))

  • #0 g_type_check_instance_cast
    at gtype.c line 4057
  • #1 terminal_window_update_geometry
    at terminal-window.c line 3751
  • #5 <emit signal notify:show-tabs on instance 0x55887ce40e60 [TerminalNotebook]>
    at gsignal.c line 3447
  • #6 g_object_dispatch_properties_changed
    at gobject.c line 1064
  • #7 g_object_notify_by_spec_internal
    at gobject.c line 1157
  • #8 g_object_notify_by_pspec
    at gobject.c line 1267
  • #9 gtk_notebook_set_show_tabs
    at gtknotebook.c line 6999
  • #10 terminal_notebook_page_removed
    at terminal-notebook.c line 335
  • #15 gtk_notebook_remove
    at gtknotebook.c line 4238
  • #19 g_signal_emit
    at gsignal.c line 3447
  • #20 gtk_container_remove
    at gtkcontainer.c line 1905
  • #21 gtk_widget_dispose
    at gtkwidget.c line 12059
  • #22 g_object_run_dispose
    at gobject.c line 1084
  • #23 gtk_notebook_forall
    at gtknotebook.c line 4578
  • #24 gtk_container_destroy
    at gtkcontainer.c line 1700
  • #29 gtk_widget_dispose
    at gtkwidget.c line 12070
  • #30 g_object_run_dispose
    at gobject.c line 1084
  • #31 gtk_box_forall
    at gtkbox.c line 2687
  • #32 gtk_container_destroy
    at gtkcontainer.c line 1700
  • #37 gtk_widget_dispose
    at gtkwidget.c line 12070
  • #45 gtk_widget_dispose
    at gtkwidget.c line 12070
  • #46 gtk_window_dispose
    at gtkwindow.c line 3151
  • #47 gtk_application_window_dispose
    at gtkapplicationwindow.c line 804
  • #48 g_object_run_dispose
    at gobject.c line 1084
  • #55 <emit signal ??? on instance 0x55887e7b2950 [GtkMessageDialog] or 0x5588805a0dc0 [GtkButton]>
    at gsignal.c line 3447
  • #56 gtk_button_key_release
    at gtkbutton.c line 1869
  • #63 gtk_window_propagate_key_event
    at gtkwindow.c line 7978
  • #64 gtk_window_key_release_event
    at gtkwindow.c line 8029

Comment 1 Christian Persch 2017-11-12 09:29:41 UTC
This should be fixed on master.