window: Avoid updating the geometry during destruction

https://bugzilla.gnome.org/show_bug.cgi?id=789692